@@ -1111,8 +1111,18 @@ OPENZWAVE_EXPORT_WARNINGS_ON
 		 * out spurious data reported occasionally by some devices.
 		 * \param _id The unique identifier of the value whose changes should or should not be verified.
 		 * \param _verify if true, verify changes; if false, don't verify changes.
+		 * \sa Manager::GetChangeVerified
 		 */
 		void SetChangeVerified( ValueID const& _id, bool _verify );
+
+		/**
+		 * \brief determine if value changes upon a refresh should be verified.  If so, the
+		 * library will immediately refresh the value a second time whenever a change is observed.  This helps to filter
+		 * out spurious data reported occasionally by some devices.
+		 * \param _id The unique identifier of the value whose changes should or should not be verified.
+		 * \sa Manager::SetChangeVerified
+		 */
+		bool GetChangeVerified( ValueID const& _id );
 
 		/**
 		 * \brief Starts an activity in a device.
