@@ -75,6 +75,7 @@ namespace OpenZWave
 		int32 GetMax()const{ return m_max; }
 
 		void SetChangeVerified( bool _verify ){ m_verifyChanges = _verify; }
+		bool GetChangeVerified() { return m_verifyChanges; }
 
 		virtual string const GetAsString() const { return ""; }
 		virtual bool SetFromString( string const& _value ) { return false; }
